Made track longer and added the logo to the main menu.

--- a/bin-debug/FunRun.html
+++ b/bin-debug/FunRun.html
@@ -53,7 +53,7 @@
             attributes.align = "middle";
             swfobject.embedSWF(
                 "FunRun.swf", "flashContent", 
-                "100%", "100%", 
+                "800", "600", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
             // JavaScript enabled so display the flashContent div in case it is not replaced with a swf object.
@@ -78,14 +78,14 @@
         </div>
         
         <noscript>
-            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="FunRun">
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="800" height="600" id="FunRun">
                 <param name="movie" value="FunRun.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#000000" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="FunRun.swf" width="100%" height="100%">
+                <object type="application/x-shockwave-flash" data="FunRun.swf" width="800" height="600">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#000000" />
                     <param name="allowScriptAccess" value="sameDomain" />
