Trying to get FB info on user.

--- a/bin-debug/index.html
+++ b/bin-debug/index.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="history/history.js"></script>
         <!-- END Browser History required section -->  
             
+		<script type="text/javascript" src="http://connect.facebook.net/en_US/all.js"></script>	
         <script type="text/javascript" src="swfobject.js"></script>
     </head>
     <body>
